Fix dark mode colors and scrollbar.

--- a/web/src/components/App.css
+++ b/web/src/components/App.css
@@ -39,7 +39,9 @@
 .panel-content {
   max-height: 100%;
   height: 100%;
-  overflow-y: scroll;
+  overflow-y: auto;
+  overflow-x: hidden;
+  color: #000000;
   padding-left: 1rem;
   padding-right: 1rem;
 }
